# flows_back

./: .gitignore  Cargo.toml  README.md
src/: consumer.rs  crud.rs  main.rs  model.rs  read_logs.rs  update_db.rs
src/db/: access_test_data.csv  init.sql  setup_db.sh  transfer_to_new_db.sh
