[package]
name = "flows_back"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
regex = "1"
lazy_static = "1.4.0"
serde = { version = "1.0", features = ["derive"] }
rusqlite = "0.26.0"

[[bin]]
name = "flows_back"
path = "src/main.rs"

[[bin]]
name = "update_db"
path = "src/update_db.rs"
