[package]
name = "flows_back"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0.0-beta.10"
regex = "1"
lazy_static = "1.4.0"
serde = { version = "1.0", features = ["derive"] }
rusqlite = "0.26.0"
redis = { version = "0.21.4", features = ["tokio-comp"] }
tokio = { version = "1", features = ["full"] }
config = "0.11.0"

[[bin]]
name = "flows_back"
path = "src/main.rs"

[[bin]]
name = "update_db"
path = "src/update_db.rs"
