[package]
name = "flows_back"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0.0-rc.1"
regex = "1"
lazy_static = "1.4.0"
serde = { version = "1.0", features = ["derive"] }
rusqlite = "0.26.3"
redis = { version = "0.21.5", features = ["tokio-comp"] }
tokio = { version = "1", features = ["full"] }
config = "0.11.0"
r2d2_sqlite = "0.19.0"
r2d2 = "0.8.9"
log = "0.4.14"
env_logger = "0.9.0"

[[bin]]
name = "flows_back"
path = "src/main.rs"

[[bin]]
name = "update_db"
path = "src/update_db.rs"
